--- a/source/pug/helpers/mixins.pug
+++ b/source/pug/helpers/mixins.pug
@@ -3,6 +3,16 @@ mixin svg-icon(iconName, iconWidth, iconHeight, iconClass=false)
   svg(class=iconClass width=iconWidth height=iconHeight )
     use(xlink:href="img/sprites.svg#" + iconName)
 
+mixin responsive-logo-image(imageLinkMobile, imageLinkTablet, imageLinkDesktop, width, height, alt, imgClass, pictureClass)
+  picture(class=(pictureClass ? pictureClass : ''))
+    source(media="(min-width: 1200px)", srcset= imageLinkDesktop + '@1x.webp 1x, ' + imageLinkDesktop + '@2x.webp 2x', type="image/webp")
+    source(media="(min-width: 768px)", srcset= imageLinkTablet + '@1x.webp 1x, ' + imageLinkTablet + '@2x.webp 2x', type="image/webp")
+    source(srcset= imageLinkMobile + '@1x.webp 1x, ' + imageLinkMobile + '@2x.webp 2x' type="image/webp")
+
+    source(media="(min-width: 1200px)", srcset= imageLinkDesktop + '@1x.png 1x, ' + imageLinkDesktop + '@2x.png 2x', type="image/png")
+    source(media="(min-width: 768px)", srcset= imageLinkTablet + '@1x.png 1x, ' + imageLinkTablet + '@2x.png 2x', type="image/png")
+    img(class=(imgClass ? imgClass : '') src= imageLinkMobile + '@1x.png', srcset= imageLinkMobile + '@1x.png 1x, ' + imageLinkMobile + '@2x.png 2x' width= width, height= height, alt= alt)
+
 mixin responsive-images(imageLinkMobile, imageLinkTablet, imageLinkDesktop, width, height, alt, imgClass, pictureClass)
   picture(class=(pictureClass ? pictureClass : ''))
     source(media="(min-width: 1200px)", srcset= imageLinkDesktop + '@1x.webp 1x, ' + imageLinkDesktop + '@2x.webp 2x', type="image/webp")
