--- a/source/pug/blocks/catalog/1_country-filter.pug
+++ b/source/pug/blocks/catalog/1_country-filter.pug
@@ -8,7 +8,7 @@ section.companions-country-filter
       button.companions-country-filter__button.companions-country-filter__button--open(type="button" tabindex="0") Показать все
       button.companions-country-filter__button.companions-country-filter__button--close.companions-country-filter__button--active(type="button" tabindex="0") Свернуть
 
-    section.companions-country-filter__continents
+    section.companions-country-filter__continents.companions-country-filter__continents--active
       h5.visually-hidden Континенты
       a.companions-country-filter__continents-name.companions-country-filter__continents-name--active(href="#") Европа
       a.companions-country-filter__continents-name(href="#") Азия
